# liquidDX11

./: CMakeLists.txt  README.md  liquidDX11.sln
.github/: pull_request_template.md
.github/workflows/: windows-build.yml
examples/example_win32_directx11/: .gitignore  DISCLAIMER.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters
examples/example_win32_directx11/docs/: ARCHITECTURE.md  BUILD.md  README.md  animation.md  config-and-presets.md  glass-material.md  recording-and-capture.md  surfaces.md  widgets.md
examples/example_win32_directx11/scripts/: build.sh
examples/example_win32_directx11/src/: main.cpp
examples/example_win32_directx11/src/app/: config.inc  config_apply.inc  megasettings.inc  pages.inc  render_capture.inc  ui_state.inc
examples/example_win32_directx11/src/app/config/: config_io.inc  config_parse.inc  glass_config.inc
examples/example_win32_directx11/src/app/pages/: account.inc  battery.inc  customize.inc  display.inc  general.inc  launchpad.inc  profile.inc  storage.inc  surface.inc
examples/example_win32_directx11/src/app/render/: device_d3d11.inc  recorder_mp4.inc  ssaa_resolve.inc
examples/example_win32_directx11/src/glass/: backdrop.cpp  backdrop.h  glass.cpp  glass.h  shaders.h  spring.h  surfaces.cpp  surfaces.h
examples/example_win32_directx11/src/glass/surfaces/: part1.inc  part2.inc  part3.inc  part4.inc  part5.inc  part6.inc
examples/example_win32_directx11/src/glass/widgets/: audio.inc  chrome.inc  fields_color.inc  modals.inc  widgets_core.inc  widgets_extra.inc  widgets_input.inc  widgets_misc.inc
